# humanfaces-diffusion-generation

./: .gitignore  LICENSE  README.md  Training_Diffusion_Models_celebahq256.ipynb  data_split_final.py  evaluate.sh  generate.sh  generate_conditional.sh  pyproject.toml  train.sh  train_conditional_diffusion.sh  training_diffusion_models_celebahq256.py
configs/: config_dit_transformer.yaml
configs/conditional/: attribute_conditional_lcunet2_celebamask_27000train.yaml  attribute_conditional_lcunet2_celebamask_2700train.yaml  attribute_conditional_lcunet3vqvae_celebamask_2700train_infonce.yaml  attribute_conditional_pretrained_lcunet3vqvae_celebamask_2700train_infonce.yaml  attribute_lcunet2_celebamask_27000train.yaml  attribute_lcunet2_celebamask_27000train_infonce.yaml  attribute_lcunet3vae_celebamask_27000train.yaml  attribute_lcunet3vae_celebamask_27000train_tunevae.yaml  attribute_lcunet3vae_celebamask_2700train_infonce.yaml  attribute_lcunet3vqvae_celebamask_27000train.yaml  attribute_lcunet3vqvae_celebamask_27000train_infonce.yaml  attribute_lcunet3vqvae_celebamask_27000train_tunevae.yaml  attribute_lcunet3vqvae_celebamask_2700train.yaml  attribute_lcunet3vqvae_celebamask_2700train_infonce.yaml  attribute_lcunet4vqvae_celebamask_27000train.yaml  attribute_lcunet5vqvae_celebamask_2700train_infonce.yaml  attribute_lcunet6vqvae_celebamask_2700train_infonce.yaml  attribute_lcunetnbvqvae_celebamask_2700train.yaml  attribute_lcunetnbvqvae_celebamask_2700train_infonce.yaml  attributes_lcunet1_celeba_large.yaml  attributes_lcunet2_celebamask_27000train.yaml  attributes_lcunet2_celebamask_27000train_infonce.yaml
configs/unconditional/: config1.yaml  config2.yaml  config3.yaml  config4.yaml  config_aug1.yaml  config_aug2.yaml  config_aug3.yaml  config_bs1.yaml  config_bs2.yaml  config_lr1.yaml  config_lr2.yaml  config_lr3.yaml  config_lr4.yaml  unet2d_ddpm2000_2000epoch.yaml
diffusion_models/: __init__.py  _version.py  config.py  generation.py  models.py  trainer.py  training_loop.py
diffusion_models/datasets/: __init__.py  attribute_dataset.py  data_utils.py  dataloader.py
diffusion_models/losses/: info_nce.py
diffusion_models/models/: attribute_embedder.py  conditional_unet.py  dit_transformer_d1.py  latent_conditional_unet.py  model_factory.py  unet_model.py  unet_notebook.py  unet_notebook_r1.py  unet_notebook_r2.py  unet_notebook_r3.py  unet_notebook_r4.py
diffusion_models/models/conditional/: attribute_embedder.py  lc_unet_1.py  lc_unet_2.py  lc_unet_3_vae.py  lc_unet_3_vqvae.py  lc_unet_4_vqvae.py  lc_unet_5_vqvae.py  lc_unet_6_vqvae.py  lc_unet_nb_vqvae.py  pc_unet_1.py
diffusion_models/models/experimental/: ldm_unet.py
diffusion_models/models/unconditional/: dit_transformer_d1.py  dit_transformer_d1_torch.py  dit_transformer_d2.py  unet_notebook_r5.py  unet_notebook_r6.py
diffusion_models/noise_schedulers/: __init__.py  ddim_scheduler.py  ddpm_scheduler.py
diffusion_models/pipelines/: attribute_pipeline.py  unconditional_pipeline.py
diffusion_models/utils/: __init__.py  attribute_pipeline.py  attribute_utils.py  ema.py  generation.py  metrics.py
notebooks/: DiT_CelebA_256_Training_FID.ipynb  Training_Diffusion_Models_celebahq256.ipynb
scripts/: evaluation.py  fid_calculator.py  generate.py  generate_on_attributes.py  segformer_fine_tuned.py  train.py  training_diffusion_models_celebahq256.py
stable_diffusion_lora/: generate_random_conditional_images.py  generate_random_unconditional_images.py  train_lora_conditional.py  train_lora_unconditional.py
stable_diffusion_lora/v1/: attribute_stable_diffusion_lora.py
ui/: app.py  constants.py
ui/tabs/: attribute_tab.py  batch_tab.py  image_to_image_tab.py  single_image_tab.py
wandb/: latest-run
wandb/run-20250327_121317-dcpxk00d/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250327_142338-0i6iyspw/: run-0i6iyspw.wandb
wandb/run-20250327_142338-0i6iyspw/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20250327_143259-jnxsns31/files/: wandb-metadata.json
